Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/repeatingAnnotations/CyclicAnnotation.out
CyclicAnnotation.java:13:11: compiler.err.cyclic.annotation.element: Baz
1 error
